ui/message_center/views/notification_background_painter.cc
@@ -9,14 +9,15 @@
 #include "ui/gfx/geometry/rect.h"
 #include "ui/gfx/geometry/size.h"
 #include "ui/gfx/skia_util.h"
-#include "ui/message_center/public/cpp/message_center_constants.h"
 
 namespace message_center {
 
 NotificationBackgroundPainter::NotificationBackgroundPainter(int top_radius,
-                                                             int bottom_radius)
+                                                             int bottom_radius,
+                                                             SkColor color)
     : top_radius_(SkIntToScalar(top_radius)),
-      bottom_radius_(SkIntToScalar(bottom_radius)) {}
+      bottom_radius_(SkIntToScalar(bottom_radius)),
+      color_(color) {}
 
 NotificationBackgroundPainter::~NotificationBackgroundPainter() = default;
 
@@ -35,7 +36,7 @@ void NotificationBackgroundPainter::Paint(gfx::Canvas* canvas,
   cc::PaintFlags flags;
   flags.setAntiAlias(true);
   flags.setStyle(cc::PaintFlags::kFill_Style);
-  flags.setColor(kNotificationBackgroundColor);
+  flags.setColor(color_);
   canvas->DrawPath(path, flags);
 }
 
