ui/message_center/views/notification_view_md.h
@@ -188,6 +188,7 @@ class MESSAGE_CENTER_EXPORT NotificationViewMD
   void UpdateWithNotification(const Notification& notification) override;
   void ButtonPressed(views::Button* sender, const ui::Event& event) override;
   void UpdateControlButtonsVisibility() override;
+  void UpdateCornerRadius(int top_radius, int bottom_radius) override;
   NotificationControlButtonsView* GetControlButtonsView() const override;
   bool IsExpanded() const override;
   void SetExpanded(bool expanded) override;
